# dtcc-wrangler

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci-wheels  ci-wheels.yml
cmake/: FindLibGEOS.cmake
sandbox/simplify/: test.py  testcase1.dbf
src/cpp/: CMakeLists.txt  bindings.cpp  dtcc_wrangler.cpp
src/cpp/include/: GEOS.h  Geometry.h  Grid.h  KDTreeVectorOfVectorsAdaptor.h  MergePolygons.h  NearestNeighbours.h  PointCloudProcessor.h  PolygonProcessor.h  Utils.h
src/dtcc_wrangler/: __init__.py
src/dtcc_wrangler/building/: modify.py
src/dtcc_wrangler/city/: __init__.py  enrich.py  filter.py  modify.py  summarize.py
src/dtcc_wrangler/geometry/: __init__.py  multisurface.py  polygons.py  surface.py
src/dtcc_wrangler/mesh/: __init__.py  filter.py  triangulate.py
src/dtcc_wrangler/pointcloud/: classify.py  convert.py  filters.py
src/dtcc_wrangler/raster/: __init__.py  analyse.py  burn.py  interpolation.py  stats.py
tests/data/poly_fix/: sharp_angle.shp  sharp_angle.shx  short_edges.dbf  short_edges.shp  short_edges.shx  small_gap.dbf  small_gap.shp  small_gap.shx  testcase1.shp  testcase1.shx
tests/data/poly_merging/: testcase1.dbf  testcase1.shp  testcase1.shx  testcase2.dbf  testcase2.shp  testcase2.shx  testcase3.dbf  testcase3.shp  testcase3.shx
tests/python/: test_burn_polygons.py  test_city_wrangling.py  test_classifty_veg.py  test_fix_polygon_edges.py  test_geometry_polygon.py  test_get_mesh_markers.py  test_mesh_cleaning.py  test_pointcloud_outlier_filtering.py  test_pointcloud_rasterization.py  test_pointcloud_veg_filtering.py  test_pointcloud_wrangling.py  test_raster_wrangling.py  test_terrain_roughness.py  test_triangulate_mesh.py
