[build-system]
requires = ["scikit-build-core", "pybind11==2.10.*"]
build-backend = "scikit_build_core.build"

[project]
name = "dtcc-wrangler"
version = "0.0.1"
description = "Data wrangling tools for the DTCC project"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: C++",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pybind11 >= 2.10.0, < 2.11.0",
  "numpy >= 1.20.0, < 2.0.0",
  "scipy >= 1.6.0, < 2.0.0",
  "shapely >= 2.0.0, < 3.0.0",
  "rasterstats >= 0.19.0, < 1.0.0",
  "pypoints2grid@git+https://github.com/dwastberg/pypoints2grid.git",
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
