[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.2"
name = "dtcc-wrangler"
description = "DTCC Wrangler"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy >= 1.20.0, < 2.0.0",
  "scipy >= 1.6.0, < 2.0.0",
  "shapely >= 2.0.0, < 3.0.0",
  "rasterio >= 1.2.0, < 2.0.0",
  "rasterstats >= 0.19.0, < 1.0.0",
  "pypoints2grid@git+https://github.com/dwastberg/pypoints2grid.git",
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
